testsuite/poke.pkl/field-init-diag-1.pk
/* { dg-do compile } */

type Foo = struct { int a = "foo"; }; /* { dg-error "" } */
